--- a/docker/config/airflow.cfg
+++ b/docker/config/airflow.cfg
@@ -318,7 +318,7 @@ api_client = airflow.api.client.local_client
 # If you set web_server_url_prefix, do NOT forget to append it here, ex:
 # ``endpoint_url = http://localhost:8080/myroot``
 # So api will look like: ``http://localhost:8080/myroot/api/experimental/...``
-endpoint_url = http://localhost:8080
+endpoint_url = http://192.168.10.113:8080
 
 [debug]
 # Used only with ``DebugExecutor``. If set to ``True`` DAG will fail with first
@@ -372,7 +372,7 @@ session_duration_minutes = 720
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is used in automated emails that
 # airflow sends to point links to the right web server
-base_url = http://localhost:8080
+base_url = http://192.168.10.113:8080
 
 # Default timezone to display all dates in the UI, can be UTC, system, or
 # any IANA timezone string (e.g. Europe/Amsterdam). If left empty the
@@ -604,7 +604,8 @@ worker_umask = 0o077
 # The Celery broker URL. Celery supports RabbitMQ, Redis and experimentally
 # a sqlalchemy database. Refer to the Celery documentation for more information.
 # broker_url = redis://redis:6379/0
-broker_url = sqla+mysql://airflow:airflow@localhost:3306/airflow
+#broker_url = sqla+mysql://airflow:airflow@localhost:3306/airflow
+broker_url = sqla+mysql://airflow:airflow@0.0.0.0:3306/airflow
 
 
 # The Celery result_backend. When a job finishes, it needs to update the
@@ -614,7 +615,8 @@ broker_url = sqla+mysql://airflow:airflow@localhost:3306/airflow
 # The use of a database is highly recommended
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#task-result-backend-settings
 # result_backend = db+postgresql://postgres:airflow@postgres/airflow
-result_backend = db+mysql://airflow:airflow@localhost:3306/airflow
+#result_backend = db+mysql://airflow:airflow@localhost:3306/airflow
+result_backend = db+mysql://airflow:airflow@0.0.0.0:3306/airflow
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
 # it ``airflow celery flower``. This defines the IP that Celery Flower runs on
@@ -728,10 +730,10 @@ processor_poll_interval = 1
 # Number of seconds after which a DAG file is parsed. The DAG file is parsed every
 # ``min_file_process_interval`` number of seconds. Updates to DAGs are reflected after
 # this interval. Keeping this number low will increase CPU usage.
-min_file_process_interval = 30
+min_file_process_interval = 0
 
 # How often (in seconds) to scan the DAGs directory for new files. Default to 5 minutes.
-dag_dir_list_interval = 300
+dag_dir_list_interval = 60
 
 # How often should stats be printed to the logs. Setting to 0 will disable printing stats
 print_stats_interval = 30
